--- a/blog-app/index.html
+++ b/blog-app/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="keywords" content="TopC,SpringBoot,Vue,博客,分享">
-  <meta name="description" content="TopC是一个多人博客平台，在这里你可以记录、分享自己的生活和工作">
+  <meta name="keywords" content="Topcoder,SpringBoot,Vue,博客,分享">
+  <meta name="description" content="Topcoder是一个多人博客平台，在这里你可以记录、分享自己的生活和工作">
   <link rel="shortcut icon" href="./static/favicon.ico" type="image/x-icon" />
-  <title>TopC TopCoder</title>
+  <title>Topcoder </title>
 </head>
 
 <body>
